Fixes overflow no being displayed.

--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -3,11 +3,6 @@
     padding: 0;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-}
-
 #root {
     height: 100%;
     width: 100%;
